@@ -1,5 +1,11 @@
 2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
 
+	* [w3m-dev 04011] accessing to an `https' URI with a fragment via a proxy
+	* url.c (HTTPrequestURI): drop fragment
+		(openURL): don't clear pu->label
+
+2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
+
 	* [w3m-dev 04010] support for deprecated __ss_family
 	* acinclude.m4 (AC_W3M_IPv6): check __ss_family
 	* config.h.in: add HAVE_OLD_SS_FAMILY
@@ -8249,4 +8255,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.889 2003/10/22 18:44:30 ukai Exp $
+$Id: ChangeLog,v 1.890 2003/10/22 18:48:09 ukai Exp $
